--- a/contact.html
+++ b/contact.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
+<head>
+  <meta charset="UTF-8">
   <title>Contact Us</title>
- </head>
- <style>
- header
- {
-	text-align:center;
-    padding:40px;
-	background-color:LightGray;
- }
- </style>
- <body>
- <header>
-  <h1>GET IN TOUCH</h1>
-  </header>
-  <main>
-  <section>
-  <h1>Address:
-  </main>
- </body>
+  <link rel="stylesheet" href="contact.css">
+</head>
+<body>
+
+  <h1>Contact Us</h1>
+
+  <div class="contact-container">
+    <h2>📞 Phone</h2>
+    <p>+91 98765 43210</p>
+
+    <h2>📍 Location</h2>
+    <p>Hyderabad, Telangana</p>
+  </div>
+
+</body>
 </html>
