--- a/index.html
+++ b/index.html
@@ -2,22 +2,49 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Food Fantasy</title>
+  <title>Scientific Calculator</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>FOOD FANTASY</h1>
-    </header>
 
-    <nav class="nav-bar">
-      <a href="home.html">Home</a>
-      <a href="menu.html">Menu</a>
-      <a href="recipe.html">Recipe</a>
-      <a href="opening.html">Opening</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+  <div class="calculator">
+    <h2>Scientific Calculator</h2>
+    <input type="text" readonly placeholder="0">
+
+    <div class="buttons">
+      <button>sin</button>
+      <button>cos</button>
+      <button>tan</button>
+      <button>√</button>
+
+      <button>π</button>
+      <button>log</button>
+      <button>ln</button>
+      <button>^</button>
+
+      <button>7</button>
+      <button>8</button>
+      <button>9</button>
+      <button>÷</button>
+
+      <button>4</button>
+      <button>5</button>
+      <button>6</button>
+      <button>×</button>
+
+      <button>1</button>
+      <button>2</button>
+      <button>3</button>
+      <button>−</button>
+
+      <button>0</button>
+      <button>.</button>
+      <button>=</button>
+      <button>+</button>
+
+      <button class="clear">C</button>
+    </div>
   </div>
+
 </body>
 </html>
